--- a/ros_controllers/package.xml
+++ b/ros_controllers/package.xml
@@ -15,6 +15,7 @@
   <build_depend>hardware_interface</build_depend>
   <build_depend>rclcpp_lifecycle</build_depend>
   <build_depend>sensor_msgs</build_depend>
+  <build_depend>std_msgs</build_depend>
   <build_depend>trajectory_msgs</build_depend>
 
   <exec_depend>controller_interface</exec_depend>
@@ -23,6 +24,7 @@
   <exec_depend>hardware_interface</exec_depend>
   <exec_depend>rclcpp_lifecycle</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
+  <exec_depend>std_msgs</exec_depend>
   <exec_depend>trajectory_msgs</exec_depend>
 
   <test_depend>ament_cmake_gtest</test_depend>
